# dbunny

./: .gitignore  README.md  README_EN.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connect.rs  mod.rs  query.rs  saved.rs  schema.rs  state.rs  storage.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: Checkbox.tsx  EditableCell.tsx  ExportMenu.tsx  Pagination.tsx  QueryResults.tsx  SavedConnectionsList.tsx  SchemaTree.tsx  Skeleton.tsx  SortableColumnHeader.tsx  TableViewHeader.tsx  TitleBar.tsx  Tooltip.tsx
web/src/contexts/: ConnectionContext.tsx  useConnection.ts
web/src/hooks/: useCellEditing.ts  useColumnResize.ts  usePendingChanges.ts  useRowSelection.ts  useSqlAutocomplete.ts  useTableData.ts
web/src/lib/: api.ts  connectionUrl.ts  exportData.ts  platform.ts
web/src/pages/: ConnectPage.tsx  DatabaseLayout.tsx  FunctionView.tsx  QueryEditor.tsx  TableStructure.tsx  TableView.tsx
web/src/types/: connection.ts  index.ts  messages.ts  query.ts  saved.ts  schema.ts
